# projet-poker

./: .gitignore  README for CodeBlocks User.txt  README.md
Texas_hold_em/: CMakeCache.txt  CMakeLists.old  CMakeLists.txt  Makefile
Texas_hold_em/src/: DiscoverProtocol.cpp  DiscoverProtocol.h  Multicast.cpp  Multicast.h  Player.cpp  Player.h  Services.cpp  Services.h  Socket.cpp  Socket.h  main.cpp  main2.cpp  multicast.cpp  multicast.h
Texas_hold_em/src/future/: future.h
test_socket_local/: CMakeLists.txt  note
test_socket_local/src/: Socket.cpp  main.cpp
